packages/Cantonese/Cantonese-1.0.6.tar.gz/Cantonese-1.0.6/grammar/cantonese.bnf
exp ::= null
    | false
    | true
    | Numeral
    | LiteralString
    | listconstructor
    | mapconstructor
    | lambda_functoindef
    | prefixexp
    | exp binop exp
    | unop exp
    | '<*>'
    | '若然' exp "=>" exp "唔系咁就" "=>" exp

prefixexp ::= var
          | '|' exp '|'
          | '(' exp ')'
          | '<|' id '|>'
          | functioncall

var ::= id
    | prefixexp '[' exp ']'
    | prefixexp '->' id
    | prefixexp '.' id 

functioncall ::= prefixexp '下' '->' args
             | prefixexp '(' args ')'


listconstructor ::= '[' {fieldlist} ']'
mapconstructor ::= '{' {fieldlist} '}'

fieldlist ::= field {',' field} [',']

field ::= '[' exp ']'
        | '{' exp '}'
        | exp

printstmt ::= '畀我睇下' args '点样先'

importstmt ::= '使下' idlist
            | '使下' '|' idlist '|'

explist ::= exp {',' exp}

varlist ::= var {',' var}

idlist ::= id {',' id}
        | '|' id {',' id} '|'

parlist ::= idlist {'<*>'}
          | '<*>  

args ::= '|' {explist} '|'
      | exp

binop ::= '+' | '-' | '*' | '/' | '^' | '%' | '<->' | 
         '<' | '<=' | '>' | '>=' | '==' | '!=' | and | or
         '>>' | '<<' | '==>'

unop ::= not

assignblock ::= varlist '系' explist [ assignblock ]

matchblock ::= '撞见' exp '->' '{' block '}' [ matchblock ]

block ::= {stat} [retstat]

stat ::= ';' |
      | '饮茶先啦'
      | '收工'
      | 'Share下' idlist
      | '讲嘢' varlist '系' explist
      | '讲嘢' '=>' '{' assignblock '}'
      | printstmt ['@' idlist]
      | importstmt
      | functioncall ['@' idlist]
      | '落操场玩跑步' block '玩到' exp '为止'
      | '$' id [parlist] '要做咩' block '搞掂'
      | '$' id [parlist] '=>' block '%%'
      | '$' id [parlist] 即係 '=>' exp_list
      | lambda_functoindef ['@' idlist]
      | '&&' idlist '喺' explist '=>' '{' block '}'
      | id '从' exp '行到' exp block '行晒'
      | '起底' args
      | '如果' exp '嘅话' '->' '{' block '}' [定系 exp 嘅话 '->' '{' block '}'] ['唔系嘅话' '->' '{' block '}']
      | match下 id '=>' '{' matchblock '}'
      | 用下 explist
      | '掟个' id '来睇下'
      | '谂下' args
      | '落Order' args
      | '有条仆街叫' ['|'] id ['|']
      | '顶你' '->' ['|'] id ['|'] exp
      | '丢你' '->' ['|'] id ['|']
      | '嗌' exp 过嚟估下 '->' exp
      | '老作一下' '->' '{' exp_list '}'
      | exp 拍住上 '->' ['|'] id ['|']
      | exp '->' exp args
      | try_stmt
      | class_def_stmt

try_stmt ::= '执嘢' '->' '{' block '}' ['揾到' exp '嘅话' '->' '{' block '}']* ['执手尾' '-> '{' block '}']

class_def_stmt ::= '咩系' exp [佢个老豆叫 id] class_def_block '明白未啊'

class_def_block ::= '佢嘅' classvarlist 係 explist
              | '佢识得' id [parlist] '=>' block '%%'
              | '佢识得' id [parlist] '->' '{' block '}'
              | '佢有啲咩' '->' '{' assignblock '}'

retstat ::= '还数' [explist]
